# Nameless.EFB

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.nameless.efb.data.db.EfbDatabase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/aircraft_profiles/: b58_baron.json  c172sp.json  da40_ng.json  pa28_warrior.json
app/src/main/assets/shaders/common/: common_uniforms.glsl
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/: EFB_Functional_Requirements.docx
docs/plans/: 00_overview.md  01_project_foundation.md  02_rust_plugin.md  03_opengl_framework.md  04_nav_database.md  05_connectivity.md  06_steam_gauges.md  07_steam_gauge_ux.md  08_moving_map_engine.md  09_map_overlays.md  10_flight_planning.md  11_g1000_pfd.md  12_g1000_mfd.md  13_g1000_controls.md
gradle/: libs.versions.toml
plugin/: Cargo.toml
plugin/.cargo/: config.toml
plugin/dataref-schema/: Cargo.toml
plugin/dataref-schema/src/: lib.rs
plugin/efb-protocol/: Cargo.toml
plugin/efb-protocol/src/: lib.rs
plugin/nav-data-builder/: Cargo.toml
plugin/nav-data-builder/src/: main.rs
plugin/terrain-preprocessor/: Cargo.toml
plugin/terrain-preprocessor/src/: main.rs
plugin/xplane-efb-plugin/: Cargo.toml
plugin/xplane-efb-plugin/src/: lib.rs  plugin.rs  xplm_shim.rs
visual-tests/: build.gradle.kts
(+226 files in other folders)
