[package]
name = "nav-data-builder"
version = "0.1.0"
edition = "2021"
description = "CLI tool that parses OurAirports CSV + X-Plane nav data files into the EFB SQLite navigation database"

[[bin]]
name = "nav-data-builder"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
csv       = "1"
quick-xml = "0.36"
rusqlite  = { version = "0.31", features = ["bundled"] }
